chore: fix layout issues after bootstrap 5 upgrade

--- a/src/theme/_tweaks.scss
+++ b/src/theme/_tweaks.scss
@@ -42,16 +42,18 @@ body {
 .jumbotron {
   margin: 2em 0;
   padding-top: 5em;
+  padding-bottom: 5em;
   background-color: $gray-100;
   color: $black;
 
   .table {
+    background-color: white;
     color: $black;
   }
 }
 
 #mainTitle {
-  margin: 110px auto 80px auto;
+  margin: 160px auto 80px auto;
 }
 
 #sponsors {
@@ -66,6 +68,19 @@ body {
 #sponsors p {
   margin: 0;
   padding: 0;
+}
+
+/* Add spacing after sections before quote blocks (section dividers) */
+.jumbotron {
+  margin-bottom: 6em !important;
+}
+
+/* Add spacing before quote blocks (section dividers) */
+.container > .blockquote {
+  margin-top: 4em !important;
+  max-width: 1000px;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 
 .section-title {
@@ -104,6 +119,25 @@ nav {
   box-shadow: 2px 2px 4px 0 #000;
 }
 
+.table-benchmarks,
+.jumbotron .table {
+  background-color: white !important;
+  
+  tbody,
+  thead,
+  tr:first-child,
+  tr:first-child th,
+  tr:first-child td {
+    border: none;
+  }
+  
+  th,
+  td {
+    background-color: white !important;
+    border-bottom: none;
+  }
+}
+
 .table-benchmarks th:nth-child(n+2) {
   text-align: right;
 }
@@ -113,12 +147,11 @@ nav {
 }
 
 .table-benchmarks tbody tr:first-child {
-  background-color: $primary-light;
-}
+  background-color: $primary-light !important;
 
-.table-benchmarks {
-  tbody, thead, tr:first-child, tr:first-child th, tr:first-child td {
-    border: none;
+  th,
+  td {
+    background-color: $primary-light !important;
   }
 }
 
